--- a/discord-activity/Cargo.toml
+++ b/discord-activity/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 rand = "0.8.5"
+serde = { version = "1.0.208", features = ["derive"] }
 serde_json = "1.0.122"
 uuid = { version = "1.10.0", features = ["v4"] }
